# ATOS-Research-Lab

./: .gitignore  BUILD.md  CEX_LISTING_WORKFLOW.md  CLAUDE.md  DEPLOYMENT_STRATEGY.md  FILECOIN_CALIBRATION_DEPLOY_CHALLENGES.md  README.md  demo.sh  docker-compose.yml  project_information.md
agents-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
agents-rust/atos-agent/: Cargo.toml
agents-rust/atos-agent/src/: http.rs  main.rs
agents-rust/atos-agent/src/http/: handlers.rs  mod.rs  pubsub.rs  state.rs  util.rs
agents-rust/atos-agent/src/http/processing/: deployer.rs  governance.rs  mod.rs  monitor.rs
agents-rust/atos-p2p/: Cargo.toml
agents-rust/atos-p2p/src/: behaviour.rs  command.rs  config.rs  handle.rs  ipld.rs  lib.rs  message.rs  pqc.rs  role.rs  schema.rs  spawn.rs  swarm.rs  topics.rs  util.rs
apps/web/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/abi/: ATOSTokenFactory.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/components/: AgentCard.tsx  CexPrepCard.tsx  DexPriceWidget.tsx  EventTicker.tsx  LiquidityFlowCard.tsx  NetworkGraph.tsx  TaskFeed.tsx  TaskForm.tsx  TokenFactoryCard.tsx  WalletButton.tsx
apps/web/hooks/: useDexPool.ts
apps/web/lib/: agents.ts  chains.ts  dex-server.ts  fonts.css  format.ts  queryClient.ts  token-factory.ts  types.ts  uniswap.ts  wagmi.ts
apps/web/styles/: globals.css
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/.github/tasks/: sprint-3h-foundry-verify-uniswap-sepolia.md
contracts/cache/: solidity-files-cache.json
contracts/script/: DeployATOSToken.s.sol  DeployATOSTokenButterfly.s.sol  DeployATOSTokenFactory.s.sol  deploy-calibration.sh  deploy-factory-calibration.sh  deploy-factory-sepolia.sh  verify-calibration.sh  verify-factory-calibration.sh
contracts/src/: ATOSToken.sol  ATOSTokenFactory.sol
contracts/test/: ATOSToken.t.sol  ATOSTokenFactory.t.sol
tasks/: sprint-3h-foundry-verify-uniswap-sepolia.md
(+34 files in other folders)
