[package]
name = "atos-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ATOS agent binary (deployer | monitor | governance)"

[[bin]]
name = "atos-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
atos-p2p = { path = "../atos-p2p" }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
