[package]
name = "atos-p2p"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ATOS libp2p layer: gossipsub + mDNS + Noise + Yamux over TCP"

[dependencies]
anyhow = "1"
futures = "0.3"
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
