[package]
name = "atos-p2p"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ATOS libp2p layer: gossipsub + mDNS + Noise + Yamux over TCP"

[dependencies]
anyhow = "1"
# IPLD / content addressing
cid = { version = "0.11", features = ["serde-codec"] }
multihash = "0.19"
sha2 = "0.10"
# Crystal-Kyber / ML-KEM (NIST FIPS 203) — pure Rust, no FFI
ml-kem = { version = "0.3", features = ["getrandom"] }
hex = "0.4"
# networking
futures = "0.3"
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
